<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
    <ImageView
        android:id="@+id/ekranLogowaniaObraz"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:contentDescription="@+string/ekranlogon"
        android:src="@drawable/tlo" >
    </ImageView>

    <RelativeLayout
        android:id="@+id/przyciskiLogowania"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="59dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/przyciskUstawienia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="57dp"
            android:clickable="true"
            android:contentDescription="@+string/ustawieniabtn"
            android:src="@drawable/selektorustawienia" />

        <ImageButton
            android:id="@+id/przyciskZaloguj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/przyciskUstawienia"
            android:clickable="true"
            android:contentDescription="@+string/zalogujbtn"
            android:src="@drawable/selektorlogin" />

        <ImageButton
            android:id="@+id/przyciskWyjscie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/przyciskUstawienia"
            android:clickable="true"
            android:contentDescription="@+string/wyjsciebtn"
            android:src="@drawable/selektorwyjscie" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText2"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignRight="@+id/editText2"
        android:layout_marginBottom="15dp"
        android:text="@string/tekstLogowanie" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignRight="@+id/editText1"
        android:ems="10"
        android:inputType="textEmailAddress" />
    
    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:text="@string/niepoprawnedane"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textViewAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/alertTxt" 
        android:visibility="invisible"/>

</RelativeLayout>