<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ekranMenuObraz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@+string/ekranlogon"
        android:src="@drawable/tlo" >
    </ImageView>

    <ImageButton
        android:id="@+id/przyciskWylogujWybor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="38dp"
        android:clickable="true"
        android:contentDescription="@+string/ustawieniabtn"
        android:src="@drawable/selektorwyloguj" />

    <ImageButton
        android:id="@+id/przyciskWsteczWybor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/przyciskWylogujWybor"
        android:layout_below="@+id/przyciskWylogujWybor"
        android:clickable="true"
        android:contentDescription="@+string/ustawieniabtn"
        android:src="@drawable/selektorwstecz" />
    
    
    <CheckBox
        android:id="@+id/checkBox3Wybor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox2Wybor"
        android:layout_below="@+id/checkBox2Wybor"
        android:text="@string/wolne"
        android:scaleX="0.80"
    	android:scaleY="0.80"/>

    <CheckBox
        android:id="@+id/checkBox4Wybor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox3Wybor"
        android:layout_below="@+id/checkBox3Wybor"
        android:text="@string/wolne" 
        android:scaleX="0.80"
    	android:scaleY="0.80"/>

    <CheckBox
        android:id="@+id/checkBox8Wybor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox3Wybor"
        android:layout_alignBottom="@+id/checkBox3Wybor"
        android:layout_alignLeft="@+id/checkBox6Wybor"
        android:text="@string/wolne"
        android:scaleX="0.80"
    	android:scaleY="0.80"/>

    <CheckBox
        android:id="@+id/checkBox9Wybor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox4Wybor"
        android:layout_alignBottom="@+id/checkBox4Wybor"
        android:layout_alignLeft="@+id/checkBox8Wybor"
        android:text="@string/wolne"
        android:scaleX="0.80"
    	android:scaleY="0.80" />

    <CheckBox
        android:id="@+id/checkBox10Wybor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox4Wybor"
        android:layout_below="@+id/checkBox4Wybor"
        android:text="@string/wolne"
        android:scaleX="0.80"
    	android:scaleY="0.80"/>

    <CheckBox
        android:id="@+id/checkBox11Wybor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox10Wybor"
        android:layout_below="@+id/checkBox10Wybor"
        android:text="@string/wolne"
        android:scaleX="0.80"
    	android:scaleY="0.80" />

    <CheckBox
        android:id="@+id/checkBox12Wybor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox10Wybor"
        android:layout_alignBottom="@+id/checkBox10Wybor"
        android:layout_alignLeft="@+id/checkBox9Wybor"
        android:text="@string/wolne"
        android:scaleX="0.80"
    	android:scaleY="0.80"/>

    <CheckBox
        android:id="@+id/checkBox14Wybor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox11Wybor"
        android:layout_below="@+id/checkBox11Wybor"
        android:text="@string/wolne"
        android:scaleX="0.80"
    	android:scaleY="0.80" />

    <CheckBox
        android:id="@+id/checkBox6Wybor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBox7Wybor"
        android:layout_alignLeft="@+id/checkBox5Wybor"
        android:text="@string/wolne" 
        android:scaleX="0.80"
    	android:scaleY="0.80"/>

    <CheckBox
        android:id="@+id/checkBox13Wybor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox12Wybor"
        android:layout_below="@+id/checkBox12Wybor"
        android:text="@string/wolne" 
        android:scaleX="0.80"
    	android:scaleY="0.80"/>

    <CheckBox
        android:id="@+id/checkBox7Wybor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox6Wybor"
        android:layout_below="@+id/checkBox1Wybor"
        android:text="@string/wolne"
        android:scaleX="0.80"
    	android:scaleY="0.80"/>

    <TextView
        android:id="@+id/textViewJakaGrupaWybor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/przyciskWsteczWybor"
        android:layout_alignLeft="@+id/textView1Wybor"
        android:text="@string/grupa" />

    <TextView
        android:id="@+id/textView1Wybor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/zalogowanyUserWybor"
        android:layout_marginLeft="20dp"
        android:text="@string/posilki" />

    <TextView
        android:id="@+id/zalogowanyUserWybor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1Wybor"
        android:layout_alignParentTop="true"
        android:text="@string/zalogowanojako" />


    <CheckBox
        android:id="@+id/checkBox2Wybor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox1Wybor"
        android:layout_below="@+id/checkBox1Wybor"
        android:scaleX="0.80"
        android:scaleY="0.80"
        android:text="@string/wolne" />

    <CheckBox
        android:id="@+id/checkBox1Wybor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkBox0Wybor"
        android:scaleX="0.80"
        android:scaleY="0.80"
        android:text="@string/wolne" />

    <CheckBox
        android:id="@+id/checkBox0Wybor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/przyciskWsteczWybor"
        android:scaleX="0.80"
        android:scaleY="0.80"
        android:text="@string/wolne" />

    <CheckBox
        android:id="@+id/checkBox5Wybor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBox6Wybor"
        android:layout_toRightOf="@+id/checkBox1Wybor"
        android:scaleX="0.80"
        android:scaleY="0.80"
        android:text="@string/wolne" />

    <ImageButton
        android:id="@+id/przyciskOkWybor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewJakaGrupaWybor"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:clickable="true"
        android:contentDescription="@+string/ustawieniabtn"
        android:src="@drawable/selektorok" />

    <ImageButton
        android:id="@+id/przyciskZaznaczWybor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/przyciskOkWybor"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/przyciskOkWybor"
        android:clickable="true"
        android:contentDescription="@+string/ustawieniabtn"
        android:src="@drawable/selektorzaznacz" />

    <ImageButton
        android:id="@+id/przyciskOdznaczWybor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/przyciskZaznaczWybor"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/przyciskZaznaczWybor"
        android:clickable="true"
        android:contentDescription="@+string/ustawieniabtn"
        android:src="@drawable/selektorodznacz" />

    <TextView
        android:id="@+id/textViewNieWybranoWybor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/przyciskZaznaczWybor"
        android:layout_alignLeft="@+id/przyciskOkWybor"
        android:text="@string/nikogo" />

</RelativeLayout>